--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@remix-run/react": "^1.6.5",
     "@remix-run/vercel": "^1.6.5",
     "@vercel/node": "^2.4.4",
+    "clsx": "^1.2.1",
+    "lodash.kebabcase": "^4.1.1",
+    "mdx-bundler": "^9.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.5",
     "@remix-run/eslint-config": "^1.6.5",
     "@remix-run/serve": "^1.6.5",
+    "@types/lodash.kebabcase": "^4.1.7",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "eslint": "^8.20.0",
