--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev"
+    "postbuild": "run-p generate:sitemap generate:rss",
+    "dev": "remix dev",
+    "generate:sitemap": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-sitemap.mjs",
+    "generate:rss": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs"
   },
   "dependencies": {
     "@remix-run/node": "^1.6.5",
@@ -11,11 +14,14 @@
     "@remix-run/vercel": "^1.6.5",
     "@vercel/node": "^2.4.4",
     "clsx": "^1.2.1",
+    "gray-matter": "^4.0.3",
     "lodash.kebabcase": "^4.1.1",
     "mdx-bundler": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "rehype-prism-plus": "^1.4.2",
+    "remark-mdx-images": "^2.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.5",
@@ -25,6 +31,10 @@
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "eslint": "^8.20.0",
+    "globby": "^13.1.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "rss": "^1.2.2",
     "typescript": "^4.7.4"
   },
   "engines": {
