port styles to using tailwind css

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "run-s build:css remix build",
     "postbuild": "run-p generate:sitemap generate:rss",
-    "dev": "remix dev",
+    "build:css": "postcss styles/**/*.css --base styles --dir app/styles",
+    "build:css-prod": "npm run build:css -- --env production",
+    "dev": "run-p dev:css dev:server",
+    "dev:server": "remix dev",
+    "dev:css": "npm run build:css -- --w",
     "generate:sitemap": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-sitemap.mjs",
     "generate:rss": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs"
   },
@@ -16,7 +20,7 @@
     "clsx": "^1.2.1",
     "gray-matter": "^4.0.3",
     "lodash.kebabcase": "^4.1.1",
-    "mdx-bundler": "^9.0.1",
+    "mdx-bundler": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reading-time": "^1.5.0",
@@ -28,13 +32,20 @@
     "@remix-run/eslint-config": "^1.6.5",
     "@remix-run/serve": "^1.6.5",
     "@types/lodash.kebabcase": "^4.1.7",
+    "@types/node": "^18.6.2",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.12",
     "eslint": "^8.20.0",
     "globby": "^13.1.2",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "rss": "^1.2.2",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
   "engines": {
