--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ node_modules
 
 /build/
 /public/build
+/public/img
 /public/sitemap.xml
 /public/rss.xml
 
 /api/index.js
 /api/index.js.map
+/api/_assets
 /app/styles/*.css
