--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "generate:rss": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs"
   },
   "dependencies": {
-    "@remix-run/node": "^1.6.5",
-    "@remix-run/react": "^1.6.5",
-    "@remix-run/vercel": "^1.6.5",
+    "@remix-run/node": "^1.6.7",
+    "@remix-run/react": "^1.6.7",
+    "@remix-run/vercel": "^1.6.7",
     "@vercel/node": "^2.4.4",
     "clsx": "^1.2.1",
     "gray-matter": "^4.0.3",
+    "invariant": "^2.2.4",
     "lodash.kebabcase": "^4.1.1",
     "mdx-bundler": "^8.0.1",
     "react": "^17.0.2",
@@ -28,9 +29,10 @@
     "remark-mdx-images": "^2.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.6.5",
-    "@remix-run/eslint-config": "^1.6.5",
-    "@remix-run/serve": "^1.6.5",
+    "@remix-run/dev": "^1.6.7",
+    "@remix-run/eslint-config": "^1.6.7",
+    "@remix-run/serve": "^1.6.7",
+    "@types/invariant": "^2.2.35",
     "@types/lodash.kebabcase": "^4.1.7",
     "@types/node": "^18.6.2",
     "@types/react": "^17.0.47",
