switch from vercel to netlify build target
- switch from using npm to yarn - netlify needs a different package for esbuild in order to work. Yarn is supporting this by defining supported os architectures.
- move images from posts in public directory for now (need to rethink how to better do this)
- include mdx files into netlify functions so that the files can be read from the filesystem

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,18 @@ node_modules
 
 .cache
 .env
-.vercel
+/.netlify
 .output
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 /build/
 /public/build
-/public/img
 /public/sitemap.xml
 /public/rss.xml
 
