--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "dev": "run-p dev:css dev:server",
     "dev:server": "remix dev",
     "dev:css": "yarn run build:css -- --w",
-    "generate:all": "run-p generate:sitemap generate:rss",
-    "generate:sitemap": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-sitemap.mjs",
-    "generate:rss": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs",
+    "generate:sitemap": "node -r esbuild-register ./scripts/generate-sitemap.ts",
+    "generate:rss": "node -r esbuild-register ./scripts/generate-rss.ts",
     "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
@@ -38,10 +37,14 @@
     "@types/invariant": "^2.2.35",
     "@types/lodash.kebabcase": "^4.1.7",
     "@types/node": "^18.6.2",
+    "@types/prettier": "^2.7.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "@types/rss": "^0.0.29",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
+    "esbuild": "^0.14.53",
+    "esbuild-register": "^3.3.3",
     "eslint": "^8.20.0",
     "globby": "^13.1.2",
     "npm-run-all": "^4.1.5",
